<resources>
    <string name="app_name">MyCalculator</string>
    <string name="textview">TextView</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="division">/</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="result">Result</string>
    <string name="all_right_reserved">All Right Reserved</string>
    <string name="all_right_are_reserved">All right are reserved</string>
</resources>