<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imCal"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        app:srcCompat="@drawable/calculator"
      />

    <EditText
        android:id="@+id/firstNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Enter First Number"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/secondNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/enter_second_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tvAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:padding="10dp"
        android:text="@string/plus"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:padding="10dp"
        android:text="@string/minus"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btenMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:padding="10dp"
        android:text="@string/multiply"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:padding="10dp"
        android:text="@string/division"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>